# Signal

./: .gitignore  CMakeLists.txt  README.md  formula_01  maffler.cpp  maffler.h  main.cpp  object.cpp  object.h  radiator.cpp  receiver.cpp  receiver.h  requirements.txt  signal.cpp  vector3d.cpp  Презентация.pptx
Headers/: descrete_maffler.h  maffler.h  muffler.h  object.h  radiator.h  receiver.h  signal.h  vector3d.h
Libs/: json.hpp
Sources/: descrete_maffler.cpp  maffler.cpp  muffler.cpp  object.cpp  radiator.cpp  receiver.cpp  signal.cpp  vector3d.cpp
UI/: main_window.ui  progress_bar.ui
py/: $ABORT$  STARTUP_INPUT.json  alpha_beta_filter.py  exported.txt  hjkhjkhkj.txt  input.json  jkljkljkl.txt  main.py  ui_main_window.py
testing/: randtest.cpp
textfiles/: measurements.txt
